@@ -38,6 +38,11 @@
 <p>2017-11-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/webp.c: Incorporate patch by Jan Spitalnik to add EXIF
+and ICC metadata support to the WebP coder.  While WebP is still
+supported back to libwebp 0.1.99, the metadata support requires at
+least libwebp 0.5.0.  Resolves SourceForge patch #52 &quot;Add EXIF/ICC
+metadata support to WebP coder&quot;.</li>
 <li>coders/png.c (ReadOneJNGImage): Fix JNG memory leaks when JPEG
 image fails to be read.
 (WriteOnePNGImage): Promotion of indexed PNG to RGBA lacked
