@@ -1,5 +1,11 @@
 2017-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/webp.c: Incorporate patch by Jan Spitalnik to add EXIF
+	and ICC metadata support to the WebP coder.  While WebP is still
+	supported back to libwebp 0.1.99, the metadata support requires at
+	least libwebp 0.5.0.  Resolves SourceForge patch #52 "Add EXIF/ICC
+	metadata support to WebP coder".
+
 	* coders/png.c (ReadOneJNGImage): Fix JNG memory leaks when JPEG
 	image fails to be read.
 	(WriteOnePNGImage): Promotion of indexed PNG to RGBA lacked
